--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -30,5 +30,28 @@
     "test.association.message": "Придумайте ассоциацию {{associationNumber}} к:",
     "test.association.numberSymbol": "№",
     "test.association.hint": "Ваша ассоциация...",
-    "test.association.next": "Далее"
+    "test.association.next": "Далее",
+
+    "test.result.message": "Поздравляем! Работа по заполнению ассоциаций завершена. Теперь посмотрим, что думает Ваше подсознание по поводу предмета запроса.",
+    "test.result.title": "Ваши результаты",
+    "test.result.description": "При анализе результатов лучше всего обратиться к специалисту, но попробуем сделать это самостоятельно.",
+    "test.result.first-layer-title": "Первый слой ассоциаций: уровень реальности",
+    "test.result.first-layer-description": "Здесь вы сможете проанализировать, насколько написанные слова связаны с реальным миром и отражают ваши реальные мысли и идеи.",
+    "test.result.second-layer-title": "Второй слой ассоциаций: уровень разума",
+    "test.result.second-layer-description[0]": "Становится понятно, в какой степени отражаются Ваши логические мысли, рациональное мышление и способность к анализу.",
+    "test.result.second-layer-description[1]": "Если большинство ассоциаций этого слоя связаны с логикой и рациональностью, у Вас хороший уровень интеллекта и аналитических способностей.",
+    "test.result.third-layer-title": "Третий слой: уровень чувств",
+    "test.result.third-layer-description": "Здесь вы также можете проанализировать отображение вашего эмоционального состояния и настроения. Если большая часть ассоциаций этого слоя связана с эмоциями, у вас высокая эмоциональная отзывчивость и чувствительность.",
+    "test.result.fourth-layer-title": "Четвертый слой ассоциаций: корень проблемы",
+    "test.result.fourth-layer-description": "Важно понять причину, по которой преимущественно сформировался этот образ. Возможно, это истинное желание или цель, или подсознательный страх, какой-то внутренний конфликт, иногда отношение или трудность, которая Вас раздражает, или задача, с которой Вы не можете справиться.",
+    "test.result.five-layer-title": "Последний слой ассоциаций: ключевое слово",
+    "test.result.five-layer-description[0]": "Последний слой – ключ к пониманию своих чувств, мыслей и поведения относительно предмета запроса. Итак, вот эта пара запрос-ключ:",
+    "test.result.five-layer-description[1]": "Посмотрите на них и постарайтесь понять взаимосвязь между этими понятиями. Вы можете открыть для себя что-то новое или обратить более пристальное внимание на то, что вы уже знали, но старались избегать.",
+    "test.result.five-layer-description[2]": "Анализируя результаты теста, Вы сможете получить более широкое представление о себе, своих мыслях, эмоциях и интуиции. Это поможет Вам увидеть скрытые аспекты Вашей личности, понять причины Ваших реакций и поведения, а также найти решения проблем или задач, с которыми Вы сталкиваетесь.",
+    "test.result.five-layer-description[3]": "Дополнительно Вы можете ответить на следующие вопросы:<br />- Какие чувства вызывает у Вас ключевое слово?<br />- Какие мысли у Вас возникли, когда Вы увидели ключевое слово?<br />- Что Вы хотели бы с этим сделать?",
+
+    "test.result.schema": "Схема",
+    "test.result.start-again": "Начать заново",
+
+    "test.schema.title": "Схема ассоциативных рядов по запросу:"
 }
