fix styles and markup

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -2,26 +2,26 @@
     "logo.alt": "Логотип da-ns.ru",
 
     "navigation.home": "Главная",
-    "navigation.about": "О тесте",
-    "navigation.run": "Начать тест",
+    "navigation.about": "О&nbsp;тесте",
+    "navigation.run": "Начать&nbsp;тест",
 
     "language-selector.ru": "рус",
     "language-selector.en": "анг",
 
     "page-not-found.message": "Страница не найдена",
 
-    "home.title": "Ассоциативный тест",
-    "home.subtitle": "Метод Карла Юнга «16 слов»",
+    "home.title": "Ассоциа<wbr/>тивный тест",
+    "home.subtitle": "Метод Карла&nbsp;Юнга «16&nbsp;слов»",
 
-    "about.title": "Об этом тесте",
-    "about.text[0]": "Метод 16 ассоциаций Карла Юнга, также известный как «Тест словесных ассоциаций», является важным психологическим инструментом, используемым для исследования подсознания и выявления основных психологических процессов. Этот метод, разработанный в начале 20 века, был частью более широких усилий Юнга по пониманию человеческой психики и ее сложностей.",
+    "about.title": "Об&nbsp;этом тесте",
+    "about.text[0]": "Метод 16&nbsp;ассоциаций Карла Юнга, также известный как «Тест словесных ассоциаций», является важным психологическим инструментом, используемым для исследования подсознания и выявления основных психологических процессов. Этот метод, разработанный в начале 20 века, был частью более широких усилий Юнга по пониманию человеческой психики и ее сложностей.",
     "about.text[1]": "Этот метод предполагает предъявление испытуемому ряда слов, который затем отвечает первым словом, которое приходит на ум в ответ на каждый стимул. Этот процесс повторяется для заранее определенного списка слов, обычно состоящего из 16 стимулов. Ассоциации, возникающие у человека, записываются, а также отмечается время его ответов. Юнг считал, что эти спонтанные ассоциации могут дать представление о мыслях, эмоциях и даже неразрешенных конфликтах внутри бессознательного участника.",
     "about.text[2]": "Быстрота и характер ответов могут раскрыть личные и архетипические значения, открывая окно в психику человека. Задержки в ответе или неожиданные ассоциации могут сигнализировать об областях психологического напряжения или двойственности. Подход Юнга предполагает, что основные проблемы, эмоции или конфликты могут проявляться через эти ассоциации и могут быть дополнительно изучены в терапевтических условиях.",
     "about.text[3]": "Более того, Юнг подчеркивал значение символов в понимании бессознательного. Он утверждал, что ассоциации, возникающие в ответ на стимулы, часто отражают личный опыт, культурные влияния и коллективные архетипы. Анализируя эти ассоциации, терапевты могут получить представление о структуре личности человека, защитных механизмах и эмоциональном фоне.",
     "about.text[4]": "Метод 16 ассоциаций Юнга не только внес вклад в область психотерапии, но и проложил путь для дальнейших исследований динамики бессознательного. Клиницисты и исследователи продолжают изучать влияние ассоциативных техник на понимание человеческого поведения и психических процессов, укрепляя наследие Юнга в психологической науке.",
 
     "test.start.message": "Итак, начнём!<br\/> Для начала, убедитесь, что никто Вас не потревожит в ближайшие 15-20 минут. Расслабьтесь.",
-    "test.start.ready": "Я готов",
+    "test.start.ready": "Я&nbsp;готов",
 
     "test.issue.message": "Отлично! На первом шаге необходимо сформулировать запрос. Подумайте о волнующей вас теме и дайте ей простую формулировку, состоящую из минимума слов.",
     "test.issue.example": "Например, «отношения с мамой», «поиск работы», «усталость»...",
@@ -51,7 +51,7 @@
     "test.result.five-layer-description[3]": "Дополнительно Вы можете ответить на следующие вопросы:<br />- Какие чувства вызывает у Вас ключевое слово?<br />- Какие мысли у Вас возникли, когда Вы увидели ключевое слово?<br />- Что Вы хотели бы с этим сделать?",
 
     "test.result.schema": "Схема",
-    "test.result.start-again": "Начать заново",
+    "test.result.start-again": "Начать&nbsp;заново",
 
-    "test.schema.title": "Схема ассоциативных рядов по запросу:"
+    "test.schema.title": "Схема ассоциативных рядов по&nbsp;запросу:"
 }
